# gaze_v3

./: .gitignore  GAZE_V3_ARCHITECTURE.md  GAZE_V3_QUICKSTART.md  PROGRESS.md  README.md  THIRD_PARTY_NOTICES.md  digital_creator_pov.md  family_use_pov.md  grouped_media.json  list_routes.py  media_list.json
.claude/: settings.local.json
MD_DOCS/: FFMPEG_BUNDLING.md
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: .gitkeep  README.md
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: engine.rs  lib.rs  main.rs
app/src/components/: Analytics.tsx  Faces.tsx  LogViewer.tsx  MainView.tsx  ModelDownload.tsx  PrivacyView.tsx  SettingsView.tsx
app/src/hooks/: useEngine.ts  useWebSocket.ts
contracts/: openapi.yaml  ws-messages.json
engine/: gaze-engine.spec  pyproject.toml
engine/src/engine/: __init__.py  main.py
engine/src/engine/api/: __init__.py  assets.py  backup.py  faces.py  favorites.py  health.py  jobs.py  libraries.py  logs.py  maintenance.py  media.py  models.py  network.py  search.py  settings.py  stats.py  videos.py
engine/src/engine/core/: __init__.py  indexer.py  lifecycle.py  network.py  scanner.py
engine/src/engine/db/: __init__.py  connection.py
engine/src/engine/middleware/: auth.py  origin.py
engine/src/engine/ml/: __init__.py  colors.py  detector.py  embedder.py  face_detector.py  whisper.py
engine/src/engine/utils/: __init__.py  ffmpeg.py  ffprobe.py  image_metadata.py  image_thumbnail.py  logging.py  paths.py
engine/src/engine/ws/: __init__.py  handler.py
scripts/: build-app.ps1  build-app.sh  build-engine.ps1  build-engine.sh  dev.ps1  dev.sh  download-ffmpeg-binaries.ps1  download-ffmpeg-binaries.sh  download-test-videos.ps1  download-test-videos.sh  verify-binaries.ps1  verify-binaries.sh
(+2 files in other folders)
