[project]
name = "gaze-engine"
version = "3.0.0"
description = "Gaze V3 - Privacy-first local video search engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
ml = [
    "openai-whisper==20240930",
    "faster-whisper>=1.0.0",
    "silero-vad>=5.1.2",
    "open-clip-torch>=2.24.0",
    "faiss-cpu>=1.7.4",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
gaze-engine = "engine.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
