[package]
name = "gaze-v3"
version = "3.0.0"
description = "Privacy-first local video search"
authors = ["Gaze Team"]
edition = "2021"

[lib]
name = "gaze_v3_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
